# peonpad

./: README.md
docs/: build-status.md  ipad-test-notes.md
docs/assets/: README.md
engine/stratagus/: CMakeLists.txt
engine/stratagus/src/game/: replay.cpp
engine/stratagus/src/include/: interface.h
engine/stratagus/src/stratagus/: mainloop.cpp
engine/stratagus/src/ui/: interface.cpp  mouse.cpp  script_ui.cpp  widgets.cpp
engine/stratagus/src/video/: sdl.cpp
patches/aleonas-tales/: 0001-fix-king-of-the-hill-map-syntax.patch  0002-limit-device-test-modes.patch
patches/stratagus/: 0008-ios-control-groups.patch
patches/wc2-data/: 0001-disable-replays-ios-test.patch
platform/apple/: README.md
platform/apple/ios/: Info.plist.in  PeonPadControlGroupLayout.cpp  PeonPadControlGroupLayout.h  PeonPadControlGroups.cpp  PeonPadControlGroups.h  copy-xcode-bundle-resources.sh
scripts/: build-ios-app.sh  build-macos-theora-encoder.sh  generate-ios-xcode.sh  prepare-ipad-build.sh  run-wartool-with-ffmpeg.sh  stage-ios-wc2-test-data.sh  stage-locked-inputs.sh  test-ios-control-groups.sh  validate-wartool-media.sh
tests/: control_group_layout_test.cpp  ffmpeg-fallback.sh  script-guardrails.sh
tests/fixtures/: fake-ffmpeg.sh  fake-ffprobe.sh  fake-theora-encoder.sh  fake-wartool-media.sh
tools/wargus-theora/: CMakeLists.txt  ffmpeg
